# Digital_image_processing

./: .gitignore  CMakeLists.txt
TE1/: CMakeLists.txt
TE1/src/: TE1.cpp
TE2/: CMakeLists.txt
TE2/src/: TE2.cpp
TE3/: CMakeLists.txt
TE3/src/: TE3.cpp
TE4/: CMakeLists.txt
TE4/src/: main.cpp
TE6/: CMakeLists.txt
TE6/src/: main.cpp
TE_Raspy/: CMakeLists.txt
TE_Raspy/src/: main.cpp
Traitement NAO/src/: main.cpp
Traitement video/: CMakeLists.txt
Traitement video/src/: main.cpp
