cmake_minimum_required(VERSION 3.17)
project(Digital_image_processing)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory(TE1)
add_subdirectory(TE2)
add_subdirectory(TE3)
add_subdirectory(TE4)
add_subdirectory(TE6)
add_subdirectory(Traitement\ NAO)
add_subdirectory(Traitement\ video)
add_subdirectory(TE_Raspy)
